--- a/front-end/src/app/pages/member-add/member-add.page.html
+++ b/front-end/src/app/pages/member-add/member-add.page.html
@@ -75,7 +75,7 @@
 
    
 
-      <ion-grid>
+      <!-- <ion-grid>
         <ion-row>
           <ion-col>
             <ion-item>
@@ -103,7 +103,7 @@
                     (ionChange)="handleChange_MT($event)" 
                     formControlName="memberType"                          
                   >
-                  <!-- <ion-select-option *ngFor="let mt of MemberType" [value]="mt">{{ mt.name }}</ion-select-option> -->
+                   <ion-select-option *ngFor="let mt of MemberType" [value]="mt">{{ mt.name }}</ion-select-option> --
                     <ion-select-option default="true" value="member">Member</ion-select-option>
                     <ion-select-option value="staff">Staff</ion-select-option>
                     
@@ -113,7 +113,7 @@
              </ion-item>
           </ion-col>
          </ion-row>
-      </ion-grid>
+      </ion-grid> -->
 
      
 
