--- a/front-end/src/app/pages/gmap/gmap.page.scss
+++ b/front-end/src/app/pages/gmap/gmap.page.scss
@@ -1,5 +1,6 @@
 ion-content {
-    --background: none !important; 
+    // --background: none !important; 
+    --background: transparent !important;
   }
   
   .maps {
@@ -11,4 +12,10 @@ ion-content {
     display: inline-block;
     width: 100%;
     height: 100%;
+  }
+
+  
+  
+  body {
+    background: transparent !important;
   }
