--- a/front-end/src/app/pages/member-update/member-update.page.html
+++ b/front-end/src/app/pages/member-update/member-update.page.html
@@ -83,7 +83,7 @@
         </ion-input>
       </ion-item> -->
 
-      <ion-grid>
+      <!-- <ion-grid>
         <ion-row>
           <ion-col>
             <ion-item>
@@ -111,7 +111,7 @@
                     (ionChange)="handleChange_MT($event)" 
                     formControlName="memberType"                          
                   >
-                  <!-- <ion-select-option *ngFor="let mt of MemberType" [value]="mt">{{ mt.name }}</ion-select-option> -->
+                  <!-- <ion-select-option *ngFor="let mt of MemberType" [value]="mt">{{ mt.name }}</ion-select-option> --
                     <ion-select-option default="true" value="member">Member</ion-select-option>
                     <ion-select-option value="staff">Staff</ion-select-option>
                     
@@ -121,7 +121,7 @@
              </ion-item>
           </ion-col>
          </ion-row>
-      </ion-grid>
+      </ion-grid> -->
 
      <div>
         <ion-button 
