--- a/front-end/src/app/static/personalinformation/personalinformation.page.html
+++ b/front-end/src/app/static/personalinformation/personalinformation.page.html
@@ -4,7 +4,19 @@
       <ion-back-button text="Previous" icon="caret-back"></ion-back-button>
     </ion-buttons>
     <ion-title>Personal Information</ion-title>
+            <ion-select 
+            *ngIf="this.loggeduserIsMember"
+                #selectElem 
+                mode="ios" justify="start" aria-label="Gym"
+                  placeholder="Select Gym" 
+                  (ionChange)="selecthandleChange($event)" 
+                  [compareWith]="compareWith"
+                  value="{{MyDefaultGymValue}}" 
+                  slot="end">
+          <ion-select-option *ngFor="let gym of joinedGyms" value="{{gym._id}}"> {{gym.gym_name | uppercase}}</ion-select-option>
+        </ion-select>
   </ion-toolbar>  
+
 </ion-header>
 
 <ion-content>
@@ -17,9 +29,9 @@
   
   <div *ngIf="this.loggeduserIsMember">
   <ion-list [inset]="true" lines="none">
-    <ion-item>
+    <!-- <ion-item>
       <ion-label>Roll : {{memberType | uppercase}} </ion-label>
-    </ion-item>
+    </ion-item> -->
 
     <ion-item>
       <ion-label>User Name : {{memberName | uppercase}} </ion-label>
@@ -63,9 +75,7 @@
 
     <ion-item>
       <ion-label>Allowed Out Time :{{memberOuttime |date:'shortTime'}} </ion-label>
-    </ion-item>
-
-    
+    </ion-item>    
 
     <ion-item>
       <ion-label>Last Date Reminder Set : {{memberSetreminder}} </ion-label>
@@ -127,8 +137,8 @@
 </ion-content>
 
 <ion-footer collapse="fade">
-  <ion-toolbar>
+  <!-- <ion-toolbar>
     <ion-title (click)="onDeleteAccount(adminEmail||memberEmail)"><strong color="danger">Delete Account</strong></ion-title>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-footer>
 
