--- a/front-end/src/app/pages/memberinfor/memberinfor.page.html
+++ b/front-end/src/app/pages/memberinfor/memberinfor.page.html
@@ -14,12 +14,12 @@ class="ion-no-border"
           [compareWith]="compareWithFn"
           placeholder="Change Property"
           (ionChange)="selecthandleChange($event)"
-          value="{{MyDefaultGymValue}}"
+          value="{{MyDefaultJoinedGymValue}}"
           mode="ios"
           multiple="false"
           shape="round"
         >
-          <ion-select-option *ngFor="let gym  of joinedGyms" [value]="gym._id">{{ gym.gym_name | uppercase}}</ion-select-option>
+          <ion-select-option *ngFor="let gym  of joinedGyms" [value]="gym.gym_id">{{ gym.gym_name | uppercase}}</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-list>
