--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -224,7 +224,7 @@ class="ion-no-border"
             <ion-label color="dark"><h2>Attendance Manager</h2></ion-label>
           </ion-item>
 
-          <ion-item *ngIf="isAttendanceOn" detail="true" >      
+          <ion-item *ngIf="isAttendanceOn" detail="true" (click)="OpenHoliday()">      
             <ion-label color="dark"><h2>Holiday Manager</h2></ion-label>
           </ion-item>
 
