--- a/front-end/src/app/pages/attendances/attendances.page.html
+++ b/front-end/src/app/pages/attendances/attendances.page.html
@@ -4,11 +4,22 @@
       Attendance
     </ion-title>
     
-    <ion-buttons slot="end">
+    <ion-buttons slot="start">
       <ion-button fill="clear" [routerLink]="['/gymtabs/infor']">
         <ion-icon slot="icon-only" name="home-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
+
+    <ion-buttons slot="end">
+      <ion-button fill="clear"
+      type="submit" 
+      [disabled]="!memberForm.valid" 
+      (click)="onFormSubmit()" >
+        <ion-icon slot="icon-only" name="arrow-redo-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+
   </ion-toolbar>
 </ion-header>
 
@@ -16,78 +27,159 @@
   <form [formGroup]="memberForm" (ngSubmit)="onFormSubmit()">
     <div>
       <ion-list>
-
-        <ion-item detail="true" href=".././attendances/holidays">
-          <ion-label>
-            <p>Festival /</p>
-            <p>Holiday List</p>
-          </ion-label>
-          <ion-label slot="end">
-            <h2> custom </h2>
-          </ion-label>
+        <ion-item >
+          <ion-label>                 
+            <ion-input
+              label="Attendance Shift Name" 
+              labelPlacement="floating"                   
+              formControlName="shiftname"        
+              type="text" required>
+            </ion-input>                 
+        </ion-label>        
+          
         </ion-item>
 
-        <ion-item detail="true">
-          <ion-label>
-            <p>Attendance Shift Name </p>
-          </ion-label>
-          <ion-label slot="end">
-            <h2>Jenix </h2>
-          </ion-label>
+        <ion-item *ngIf="!isToggled">
+          <ion-grid>
+            <ion-row>
+              <ion-col size-md="6">
+                <ion-label>
+                  <h2>In Time</h2>
+                  <ion-datetime-button  datetime ="Itime" formControlName="shift_start_time" ngDefaultControl></ion-datetime-button>
+                </ion-label>
+                </ion-col>
+              <ion-col size-md="6">
+                <ion-label>
+                  <h2>Out Time</h2>
+                 <ion-datetime-button  datetime ="Otime" formControlName="shift_end_time" ngDefaultControl></ion-datetime-button>
+              </ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        
         </ion-item>
-        <ion-item detail="true">
-          <ion-label>
-            <p>Attendance Time</p>
-          </ion-label>
-          <ion-label slot="end">
-            <h2>08:00 ~ 18:00 </h2>
-          </ion-label>
-        </ion-item>
+
+            <ion-modal [keepContentsMounted]="true">
+              <ng-template>
+                <ion-datetime  
+                formControlName="shift_start_time"           
+                [value]="intimeValue"
+                [showDefaultButtons]="true"
+                presentation="time" 
+                hourCycle="h24"
+                id="Itime" 
+                #Itime
+                (ionChange)="InTimeChange($event)"></ion-datetime>
+              </ng-template>
+            </ion-modal>
+
+
+          
 
         <!-- ion modal to get start and end time input -->
 
 
+        
 
-        <ion-item detail="true">
+        <!-- <ion-item detail="true">
           <ion-label>
             <p>Weekdays</p>
           </ion-label>
           <ion-label slot="end">
             <h2> All </h2>
+            <ion-input
+              label="Repeat:" label-placement="floating"
+              formControlName="repeat"         
+              type="boolean" required></ion-input>
           </ion-label>
-        </ion-item>
-      </ion-list>
-    </div>
+        </ion-item> -->
 
-    <div>
-      <ion-list>
-        <ion-item>
-          <ion-grid>
-            <ion-row>
-              <ion-col *ngFor="let d of days ">
-                <ion-fab>
-                  <ion-fab-button (click)="presentTimeAlert(d.value)">
-                    <ion-label>{{d.name}}</ion-label>
-                  </ion-fab-button>
-                </ion-fab>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-        </ion-item>
+       
 
       </ion-list>
     </div>
+
+    <!-- [min]="intimeValue" -->
+
+    
+    <ion-modal [keepContentsMounted]="true">
+      <ng-template>
+        <ion-datetime
+        formControlName="shift_end_time" 
+        [min]="intimeValue"
+        [value]="outtimeValue"
+        [showDefaultButtons]="true"
+        presentation="time"
+        hourCycle="h24" 
+        id="Otime" 
+        #Otime
+        (ionChange)="OutTimeChange($event)"></ion-datetime>
+      </ng-template>
+    </ion-modal>
 
 
   </form>
 
+  <ion-item>     
+    <ion-toggle 
+    mode="ios"
+    [enableOnOffLabels]="true"
+    justify="space-between"
+    color="danger"              
+    [ngModel]="isToggled" 
+    (ngModelChange)="notifyAndUpdateIsToggled($event)"> Custom Schedule
+    </ion-toggle>    
+  </ion-item>
+
+
+  
+    <div *ngIf="isToggled">
+          <ion-grid>
+
+            <ion-row>
+              <ion-col *ngFor="let day of weekdays ">
+                <ion-fab >
+                    <ion-fab-button [ngClass]="{'black-fab': day.isHoliday, 'blue-fab': !day.isHoliday}"  (click)="customTiming(day)">
+                    <ion-label  >{{day.name}}</ion-label>
+                  </ion-fab-button>
+                </ion-fab>
+              </ion-col>
+            </ion-row>
+
+            <ion-row class="col">
+              <ion-col *ngFor="let day of weekdays ">
+                    <ion-label (click)="customTiming(day)" >{{day.punchIn | date:'shortTime'}}</ion-label>                
+              </ion-col>
+            </ion-row>
+
+            <ion-row>
+              <ion-col *ngFor="let day of weekdays ">
+                    <ion-label (click)="customTiming(day)">{{day.punchOut | date:'shortTime'}}</ion-label>                
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+    </div>
+   
+
 
   <div>
-    <ion-item>
-      <ion-label color="danger">
-        <h2> Delete Attendance Shift </h2>
+    <ion-item detail="true" href=".././attendances/holidays">
+      <ion-label>
+        <h2> Set Festivals </h2>
       </ion-label>
     </ion-item>
   </div>
+
+
+  <!-- <ion-item>
+    <ion-label position="floating">Select Time</ion-label>
+    <ion-datetime 
+    presentation="time"
+    displayFormat="h:mm A" [(ngModel)]="selectedTime" pickerFormat="h mm A"></ion-datetime>
+  </ion-item>
+  <ion-button (click)="showSelectedTime()">Show Selected Time</ion-button> -->
+
+
+
 
 </ion-content>
