--- a/front-end/src/app/pages/attendances/attendances.page.html
+++ b/front-end/src/app/pages/attendances/attendances.page.html
@@ -53,6 +53,9 @@
                   <h2>Out Time</h2>
                  <ion-datetime-button  datetime ="Otime" formControlName="shift_end_time" ngDefaultControl></ion-datetime-button>
               </ion-label>
+              <ion-text color="danger" *ngIf="memberForm.get('shift_end_time').hasError('endTimeInvalid')">
+                end Time must be after start Time.
+              </ion-text>
               </ion-col>
             </ion-row>
           </ion-grid>
@@ -148,13 +151,13 @@
 
             <ion-row class="col">
               <ion-col *ngFor="let day of weekdays ">
-                    <ion-label (click)="customTiming(day)" >{{day.punchIn | date:'shortTime'}}</ion-label>                
+                    <ion-label (click)="customTiming(day)" [ngClass]="{'holiday-text': day.isHoliday}">{{day.punchIn | date:'HH:MM'}}</ion-label>                
               </ion-col>
             </ion-row>
 
             <ion-row>
               <ion-col *ngFor="let day of weekdays ">
-                    <ion-label (click)="customTiming(day)">{{day.punchOut | date:'shortTime'}}</ion-label>                
+                    <ion-label (click)="customTiming(day)">{{day.punchOut | date:'HH:MM'}}</ion-label>                
               </ion-col>
             </ion-row>
           </ion-grid>
