--- a/front-end/src/app/pages/attendances/modaldayschedule/modaldayschedule.component.html
+++ b/front-end/src/app/pages/attendances/modaldayschedule/modaldayschedule.component.html
@@ -49,6 +49,9 @@
                   <ion-label>
                    <ion-datetime-button slot="end" datetime ="PunchOutTime" formControlName="punchOut" ngDefaultControl></ion-datetime-button>
                 </ion-label>
+                <ion-text color="danger" *ngIf="myForm.get('punchOut').hasError('endTimeInvalid')">
+                  end Time must be more than start Time.
+                </ion-text>
                 </ion-col>
               </ion-row>
             </ion-grid>
@@ -62,7 +65,8 @@
 
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
-        <ion-datetime                  
+        <ion-datetime 
+        mode="ios"             
         [value]="intimeValue"
         [showDefaultButtons]="true"
         presentation="time" 
@@ -71,12 +75,13 @@
         #InTime
         (ionChange)="InTimeChange($event)"></ion-datetime>
       </ng-template>
-      <!-- formControlName="punchIn", -->
+      <!-- formControlName="punchIn"  -->
     </ion-modal>
 
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
-        <ion-datetime        
+        <ion-datetime  
+        mode="ios"   
         [min]="intimeValue"
         [value]="outtimeValue"
         [showDefaultButtons]="true"
@@ -105,14 +110,24 @@
           <ion-row>
             <ion-col size-md="6"><ion-button (click)="presentPopover($event)" fill="outline" shape="round">Also Apply</ion-button></ion-col>
             
-            <ion-popover #popover [isOpen]="isOpen" (didDismiss)="isOpen = false">
+            <ion-popover 
+            #popover 
+            [isOpen]="isOpen" 
+            (didDismiss)="isOpen = false">
               <ng-template>
-                <ion-content class="ion-padding">
+                <ion-content class="ion-padding" color="light">
                   <ion-list>
-                    <ion-label>All Days</ion-label>
-                    <ion-label>Office Days(Mon-Fri)</ion-label>
-                    <ion-label>Factory Days(Mon-Sat)</ion-label>
-                  </ion-list></ion-content>
+                    <ion-item (click)="allday()">
+                      <ion-label>All Days</ion-label>
+                    </ion-item>
+                    <ion-item (click)="officeday()">
+                      <ion-label>For Office Days</ion-label>
+                    </ion-item>
+                    <ion-item (click)="factroyday()">
+                      <ion-label>For Factory Days</ion-label>
+                    </ion-item>
+                  </ion-list>
+                </ion-content>
               </ng-template>
             </ion-popover>
             
